Fix #title2: remove background, fix alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -606,8 +606,10 @@
     font-size: 1.125rem;
     position: relative;
     z-index: 2;
-    background-color: #f9fafb;
-    padding: 0 4px;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    text-align: left;
   }
 
   #title3 {
